--- a/src/main/webapp/pages/PgPatientRegForm/PgPatientRegForm.css
+++ b/src/main/webapp/pages/PgPatientRegForm/PgPatientRegForm.css
@@ -27,8 +27,15 @@ h2 {
 .app-label {
     font-family: 'open sans', sans-serif;
     color: #2c3e50;
-    font-size: 11px;
+    font-size: 1.5em;
     font-weight: 300;
+}
+
+.wm-app .form-group .app-label, .wm-app .app-livefilter .app-label, .wm-app .app-form .app-label {
+
+    /*padding-left: 1em;*/
+    padding-top: .7em;
+
 }
 
 .live-field {
